fix(507): edit product hover input in dark mode

--- a/app/styles/form.css
+++ b/app/styles/form.css
@@ -2,6 +2,10 @@
   @apply !bg-transparent rounded-none border-0 !border-b-[#d2d6da] border-b border-solid cursor-text;
 }
 
+.select-custom button span {
+  @apply dark:text-lighter;
+}
+
 .select-custom li,
 .select-custom svg {
   @apply cursor-pointer;
